# ai-musicverse

./: AI MUSICVERSE.bmarks  AI MUSICVERSE.cbp  AI MUSICVERSE.depend  AI MUSICVERSE.dev  AI MUSICVERSE.layout  CHANGELOG.md  CMakeLists.txt  README.md  func.hpp  main.cpp  private.h
include/: AMVApp.h  private.h  version.h
res/: resource.rc
src/: AMVApp.cpp  main.cpp
